alignment issue , Ui fixes

--- a/src/app/pages/candidate/candidate.component.scss
+++ b/src/app/pages/candidate/candidate.component.scss
@@ -734,7 +734,7 @@
 }
 
 .text_on_side {
-  margin: 15px 0px 0px 18px;
+  margin: 15px 0px 0px 45px;
   font-size: 12px;
   color: #262626;
   opacity: 1;
